Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}
          - spelling fix in generated CONTRIBUTING file (thanks, Edward
            Betts!)

0.130     2017-08-28 01:13:46Z
          - fix test that is broken with older [CopyFilesFromRelease]
          - fix inverted condition in [Git::Check] configuration (wrong since
            version 0.126)
          - fix airplane mode, broken since version 0.127
          - [@Git::VersionManager] and [MetaProvides::Update] are moved off to
            their own distribution, Dist-Zilla-PluginBundle-Git-VersionManager

0.129     2017-08-21 04:45:42Z
          - fix a new test to avoid triggering the "looks like you're
            installing from cpan, rather than building a distribution in the
            repository" heuristic when using Dist::Zilla (e.g. on older perls)

0.128     2017-08-16 23:39:44Z
          - version extraction and updating plugins now fully extracted out
            into their own plugin bundle, [@Git::VersionManager], to be soon
            released in its own distribution

0.127     2017-08-06 03:16:22Z
          - fix test library's type handling on older Dist::Zilla

0.126     2017-08-02 04:31:30Z
          - minor fixes to distribution prereqs
          - fixed logic for adding default configs for certain plugins and
            their roles

0.125     2017-05-21 01:43:09Z
          - fix tests to work on older perls (thanks, [EnsureLatestPerl])
          - [UseUnsafeInc] (with dot_in_INC=0) is only enabled in perls
            compiled with -DDEFAULT_INC_EXCLUDES_DOT.

0.124     2017-05-13 16:34:59Z
          - added [EnsureLatestPerl] to before-release checks
          - added [EnsureUnsafeInc] (with dot_in_INC=0)

0.123     2017-04-27 21:04:35Z
          - bump up prereq for Test::Portability::Files (used by
            [Test::Portability]) for better compliance with ANSI filename
            formats
          - bump up prereq for [VerifyPhases] to get share_map fix