@@ -23,6 +23,7 @@ bugtracker.rt = 1
 
 [GatherDir::Template]
 root = skel
+rename.travis.yml = '.travis.yml'
 
 [ReadmeAnyFromPod]
 type = pod
